devel
-----

* Add some more metrics to the ConnectionPool.

* Remove HTTP "Connection" header when forwarding requests in the cluster
  from one coordinator to another, and let the internal network layer
  handle closing of connections and keep-alive.

* Added new metric: "arangodb_collection_lock_sequential_mode" this will count
  how many times we need to do a sequential locking of collections. If this
  metric increases this indicates lock contention in transaction setup.
  Most likely this is caused by exlcusive locks used on collections with
  more than one shard.

* Fix for BTS-213
  Changed the transaction locking mechanism in the cluster case.
  For all installations that do not use "exclusive" collection locks this change
  will not be noticable. In case of "exclusive" locks, and collections with more
  than one shard, it is now less likely to get a LOCK_TIMEOUT (ErrorNum 18).
  It is still possible to get into the LOCK_TIMEOUT case, especially if
  the "exclusive" operation(s) are long-running.

* Reduce overhead of audit logging functionality if audit logging is turned
  off.

* Add several more attributes to audit-logged queries, namely query execution
  time and exit code (0 = no error, other values correspond to general ArangoDB 
  error codes).

* Added "startupTime", "computationTime" and "storageTime" to Pregel result
  statistics.

* Fixed a bug in maintainer mode sorting followerinfo lists the wrong way.

* Limit value of `--rocksdb.block-cache-size` to 1 GB for agent instances to
  reduce agency RAM usage, unless configured otherwise. In addition, limit the 
  value of `--rocksdb.total-write-buffer-size` to 512 MB on agent instances for
  the same reason.

* Fixed issue #13238 Thread naming API on Windows are now used only if
  available in KERNEL32.DLL

* When querying the list of currently running or slow AQL queries, ignore not-yet
  created databases on other coordinators.
