@@ -714,7 +714,7 @@ function GenericAqlSetupPathSuite(type) {
           // We do not sync shard-locks, so no deadlock possible
           return false;
         }
-        // If any of the writes is exclusive we enfoce sequential locking
+        // If any of the writes is exclusive we enforce sequential locking
         return fExclusive === USE_EXCLUSIVE || sExclusive === USE_EXCLUSIVE;
       };
 
