@@ -1,6 +1,9 @@
 devel
 -----
 
+* Drop a pair of braces {} in /_admin/metrics in case of empty labels, which
+  makes the API adhere better to the official Prometheus syntax.
+
 * Add some more metrics to the ConnectionPool.
 
 * Remove HTTP "Connection" header when forwarding requests in the cluster
